# LibertyRecomp

./: .gitignore  .gitmodules  CMakeLists.txt  Claude_export_Generating MD documentation from source code_1c7c930c-d4c3-42cb-9fab-0e9590d49071.jsonl  README.md  ROOT_CAUSE_ANALYSIS.md  blocking_analysis.txt  context_fix_test.txt  conversation_webpage.html  crash_diag.txt  debug_crash.lldb  debug_root_causes.lldb  failopen_test.txt  failopen_test2.txt  failopen_test3.txt  failopen_test4.txt  failopen_test5.txt  failopen_test6.txt  failopen_test7.txt  failopen_test8.txt  fresh_log2.txt  fresh_log3.txt  fresh_log4.txt  fresh_log5.txt  fresh_log6.txt  fresh_log7.txt  lib17.txt  lib18.txt  liberty_debug_sample.txt  liberty_lldb_bt.txt  liberty_main_sample.txt  liberty_research_sample.txt  liberty_sample.txt  liberty_sample2.txt  liberty_sample3.txt  liberty_sample4.txt  liberty_sample_running.txt  liberty_sample_vtablefix.txt  liberty_vtable_sample.txt  long_test.txt  (+7 more)
GAME SAVES/GTA 4 Save Game-1/: Read This.txt  SGTA400
GAME SAVES/GTA IV 100% SAVE by Kuci/: _gta.cz_readme.txt
GAME SAVES/GTA IV 100% SAVE by Kuci/GTA IV 100% SAVE/: Read Me EN.txt  Read Me SK-CZ.txt
LibertyRecomp/: CMakeLists.txt  main.cpp  stdafx.h
LibertyRecomp/apu/driver/: sdl2_driver.cpp
LibertyRecomp/cpu/: guest_thread.cpp  guest_thread.h  ppc_context.h
LibertyRecomp/gpu/: gfx_state.cpp  gfx_state.h  gtaiv_device.h  postprocess_renderer.cpp  postprocess_renderer.h  video.cpp  video.h
LibertyRecomp/hid/: hid.h  mouse_camera.h
LibertyRecomp/hid/driver/: sdl_hid.cpp
LibertyRecomp/install/: installer.cpp  nebula_manager.cpp  nebula_manager.h  platform_paths.cpp  platform_paths.h
LibertyRecomp/install/hashes/: dlc_tbogt.cpp  dlc_tbogt.h  dlc_tlad.cpp  dlc_tlad.h  game.cpp  title_update.cpp  title_update.h
LibertyRecomp/kernel/: heap.cpp  heap.h  imports.cpp  imports.cpp.backup  imports.cpp.bak2  imports.cpp.bak3  imports.cpp.bak_streaming  imports.cpp.failed_attempts  memory.cpp  memory.h  mod_overlay.cpp  mod_overlay.h  object_table.h  save_hooks.cpp  save_system.cpp  save_system.h  sync_table.cpp  sync_table.h  vfs.cpp  vfs.h  xam.cpp  xdm.cpp  xdm.h  xenon_memory.cpp  xevent.cpp  xevent.h  xsemaphore.cpp  xsemaphore.h
LibertyRecomp/kernel/io/: file_system.cpp  file_system.h  gta_file_system.cpp  gta_file_system.h  gxt_loader.cpp  img_loader.cpp  img_loader.h  net_session.h  net_socket.cpp  net_socket.h  p2p_manager.cpp  p2p_manager.h  rpf_loader.cpp  session_tracker.cpp  session_tracker.h  texture_convert.cpp  texture_convert.h
LibertyRecomp/locale/: config_locale.cpp  locale.cpp
LibertyRecomp/patches/: audio_patches.cpp  gta4_patches.cpp  patches.h  player_limit_patches.cpp  player_limit_patches.h
LibertyRecomp/runtime/: rex_adapter.h  rex_runtime.h
LibertyRecomp/ui/: achievement_overlay.cpp  game_window.cpp  installer_wizard.cpp  network_status_overlay.cpp  online_multiplayer_menu.cpp
LibertyRecomp/user/: config.cpp  config.h  config_def.h
LibertyRecompLib/: CMakeLists.txt
LibertyRecompLib/shader/: shader_cache.h
UnleashedRecomp-main/: TECHNICAL_DOCUMENTATION.md
docs/: ACTUAL_ROOT_CAUSE_BIG_ENDIAN.md  ARCHITECTURE_REFERENCE.md  BUILDING.md  DLC_UPDATE_RESEARCH.md  DOCS_INDEX.md  FINAL_ROOT_CAUSE_ANALYSIS.md  FIREBASE_SETUP.md  GTA4_MENU_SYSTEM_RESEARCH.md  INSTALLATION_ARCHITECTURE.md  NOTES.md  ONLINE_MULTIPLAYER.md  PHASE1_VTABLE19_RESEARCH.md  PROPER_STREAMING_FIX_STRATEGY.md  RENDERER_REFERENCE.md  RENDERING_RESEARCH.md  RESEARCH_GPU_INIT_BLOCK.md  RESOURCE_ARRAY_CORRUPTION_TRACE.md  REWRITE_PLAYBOOK.md  RPF_EXTRACTION_DESIGN.md  RUNTIME_BEHAVIOR.md  SHADER_PIPELINE.md  STORAGE_DEVICE_VTABLE_RESEARCH.md  STORAGE_VTABLE_ANALYSIS.md  STORAGE_VTABLE_RESEARCH.md  STREAMING_CONFIG_FILE_ANALYSIS.md  TECHNICAL_DOCUMENTATION.md  TRUE_ROOT_CAUSE_RESEARCH.md  VFS_STREAM_INI_ISSUE_ANALYSIS.md  VTABLE_CORRUPTION_ROOT_CAUSE_ANALYSIS.md  XENON_MEMORY_MAP_COMPLETE.md
review/: lesson.txt  lesson2.txt  lesson3.txt
tools/: CMakeLists.txt  analyze_crash.py  analyze_heap_corruption.py  analyze_memmove_crash.py  analyze_memmove_crash2.py  analyze_memory_layout.py  compile_postprocess_shaders.sh  generate_sps_table.py  trace_stream.py  xex_ctor_finder.py
tools/GTAIV.EFLC.FusionFix-master/source/: loadingdelays.ixx
tools/ghidra_projects/GTA4.rep/idata/: ~index.bak
tools/math-mcp-server/: package-lock.json  package.json
tools/math-mcp-server/src/: index.ts
tools/math-mcp-server/src/tools/: math-tools.ts
tools/nebula/: CMakeLists.txt  README.md  build.sh
tools/nebula/config/: client.yml.template  lighthouse.yml.template
tools/ppc-mcp-server/: mcp-config-example.json  package-lock.json  package.json
tools/ppc-mcp-server/src/: build-index.ts  index.ts  types.ts
tools/ppc-mcp-server/src/parsers/: ppc-parser.ts
tools/ppc-mcp-server/src/tools/: analyzers.ts  extended-analyzers.ts  rendering-tools.ts
tools/xess/doc/xess_frame_generation_doxygen/: annotated.html  classes.html  dir_ca49289aca01f57ada9610462362aa15.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__xefgswapchain-d3d12.html  group__xefgswapchain.html  group__xefgswapchain__debug.html  index.html  modules.html  struct__xefg__swapchain__2d__t.html  struct__xefg__swapchain__d3d12__init__params__t.html  struct__xefg__swapchain__d3d12__resource__data__t.html  struct__xefg__swapchain__frame__constant__data__t.html  struct__xefg__swapchain__present__status__t.html  struct__xefg__swapchain__properties__t.html  struct__xefg__swapchain__version__t.html  xefg__swapchain_8h.html  xefg__swapchain_8h_source.html  xefg__swapchain__d3d12_8h.html  xefg__swapchain__d3d12_8h_source.html  xefg__swapchain__debug_8h.html  xefg__swapchain__debug_8h_source.html
tools/xess/include/: xess.h  xess_d3d12.h
tools/xtd_tools/: analyze_all_textures.py  build_all_xtd.py  check_dimensions.py  compare_formats.py  comprehensive_texture_review.py  convert_to_dxt5.py  extract_xtd.sh  run_xtd_extract.sh  verify_conversion.py
(+76 files in other folders)
